Bug #17235 perror prints wrong prefix for ndb error codes
Submitted: 8 Feb 2006 14:01 Modified: 14 Feb 2006 10:59
Reporter: Hartmut Holzgraefe
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:any OS:Any (any)
Assigned to: Tomas Ulin Target Version:

[8 Feb 2006 14:01] Hartmut Holzgraefe
Description:
When using the --ndb option of perror the result lines for ndb errors start with
"OS error code", this should be "NBD error code" instead

How to repeat:
$ perror --ndb 743
OS error code 743:  Unsupported character set in table or index: Permanent error: Schema
error
[8 Feb 2006 16:24] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2321
[8 Feb 2006 16:29] Tomas Ulin
pushed to 5.0.19
[14 Feb 2006 10:59] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 5.0.19 changelog; closed.