Bug #17235  	perror prints wrong prefix for ndb error codes